# cookiecutter-ansible-role

./: .example-cookiecutterrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  cookiecutter.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/: settings.yml
{{cookiecutter.role_dir}}/: .travis.yml  CONTRIBUTORS.md  README.md  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.role_dir}}/.github/: settings.yml
{{cookiecutter.role_dir}}/.github/workflows/: default.yml  release-drafter.yml  release-galaxy.yml
{{cookiecutter.role_dir}}/defaults/: main.yml
{{cookiecutter.role_dir}}/handlers/: main.yml
{{cookiecutter.role_dir}}/molecule/alpine313/: molecule.yml
{{cookiecutter.role_dir}}/molecule/alpine314/: molecule.yml
{{cookiecutter.role_dir}}/molecule/debian11/: molecule.yml
{{cookiecutter.role_dir}}/molecule/debian8/: molecule.yml
{{cookiecutter.role_dir}}/molecule/fedora34/: molecule.yml
{{cookiecutter.role_dir}}/molecule/fedora35/: molecule.yml
{{cookiecutter.role_dir}}/molecule/rocky8/: molecule.yml
{{cookiecutter.role_dir}}/molecule/ubuntu1604/: molecule.yml
{{cookiecutter.role_dir}}/molecule/ubuntu2204/: molecule.yml
{{cookiecutter.role_dir}}/tasks/: main.yml
{{cookiecutter.role_dir}}/vars/: main.yml
{{cookiecutter.role_slug}}/: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
{{cookiecutter.role_slug}}/.github/: settings.yml
{{cookiecutter.role_slug}}/.github/workflows/: default.yml  release-galaxy.yml
{{cookiecutter.role_slug}}/meta/: main.yml
{{cookiecutter.role_slug}}/molecule/alpine313/: molecule.yml
{{cookiecutter.role_slug}}/molecule/centos7/: molecule.yml
{{cookiecutter.role_slug}}/molecule/centos8/: molecule.yml
{{cookiecutter.role_slug}}/molecule/debian10/: molecule.yml
{{cookiecutter.role_slug}}/molecule/debian11/: molecule.yml
{{cookiecutter.role_slug}}/molecule/debian8/: molecule.yml
{{cookiecutter.role_slug}}/molecule/debian9/: molecule.yml
{{cookiecutter.role_slug}}/molecule/fedora/: molecule.yml
(+33 files in other folders)
