[tool.poetry]
name = "{{cookiecutter.role_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ansible = "^8.0.0"
ansible-compat = "3.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.7"
flake8 = "^6.0.0"
cookiecutter = "^2.1.1"
pre-commit = "^2.20.0"
molecule = {extras = ["docker"], version = "^5.0.1"}
molecule-plugins = {extras = ["vagrant"], version = "^23.4.1"}
ansible-lint = { version = "^6.9.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
