[tool.poetry]
name = "{{cookiecutter.role_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^3.1.0"
ansible-lint = "^5.0.6"
docker = "^4.4.4"
mkdocs = "^1.1.2"
molecule = {extras = ["docker"], version = "^3.3.0"}
pip-tools = "^6.0.1"
yamllint = "^1.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
pylint = "^2.7.3"
tox = "^3.23.0"
pyats = "^21.2"
robotframework = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
